# stock-ai-investor

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: ai_agent.py  config.py  main.py  market_data.py  models.py  ui.py
app/templates/: base.html  index.html
tests/: test_ai_agent.py  test_market_data.py  test_ui.py
